adding in svd and search wrapper

--- a/app/utilities/SVD.ipynb
+++ b/app/utilities/SVD.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-26T14:47:48.547065Z",
-     "start_time": "2021-04-26T14:47:47.961634Z"
+     "end_time": "2021-04-29T15:39:15.350461Z",
+     "start_time": "2021-04-29T15:39:14.417939Z"
     }
    },
    "outputs": [],
@@ -22,8 +22,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-26T14:47:49.090609Z",
-     "start_time": "2021-04-26T14:47:49.088321Z"
+     "end_time": "2021-04-29T15:39:15.900845Z",
+     "start_time": "2021-04-29T15:39:15.898900Z"
     }
    },
    "outputs": [],
@@ -37,11 +37,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-29T15:39:32.813183Z",
+     "start_time": "2021-04-29T15:39:32.804959Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2734"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(GAME_INFO)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-26T14:47:50.197248Z",
-     "start_time": "2021-04-26T14:47:49.854628Z"
+     "end_time": "2021-04-29T15:39:26.212373Z",
+     "start_time": "2021-04-29T15:39:25.833912Z"
     }
    },
    "outputs": [],
